// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormComponents FormInput - Snapshots should match snapshot for basic input 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#F8FAFC",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Email
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#121214",
        "borderColor": "rgba(255, 255, 255, 0.08)",
        "borderRadius": 12,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "minHeight": 52,
        "paddingHorizontal": 14,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Email"
      autoCapitalize="none"
      autoComplete="off"
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Enter email"
      placeholderTextColor="#A8A29E"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#F8FAFC",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          false,
          undefined,
          false,
        ]
      }
      value=""
    />
  </RCTView>
</RCTView>
`;

exports[`FormComponents FormInput - Snapshots should match snapshot for disabled 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#F8FAFC",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Email
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F5F5F4",
        "borderColor": "rgba(255, 255, 255, 0.08)",
        "borderRadius": 12,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "minHeight": 52,
        "opacity": 0.7,
        "paddingHorizontal": 14,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Email"
      autoCapitalize="none"
      autoComplete="off"
      blurOnSubmit={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A8A29E"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#F8FAFC",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          false,
          undefined,
          false,
        ]
      }
      value="disabled@example.com"
    />
  </RCTView>
</RCTView>
`;

exports[`FormComponents FormInput - Snapshots should match snapshot for multiline 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#F8FAFC",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Description
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#121214",
        "borderColor": "rgba(255, 255, 255, 0.08)",
        "borderRadius": 12,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "minHeight": 100,
        "paddingHorizontal": 14,
        "paddingVertical": 12,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Description"
      autoCapitalize="none"
      autoComplete="off"
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={true}
      numberOfLines={4}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A8A29E"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#F8FAFC",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          {
            "minHeight": 76,
            "textAlignVertical": "top",
          },
          undefined,
          false,
        ]
      }
      value=""
    />
  </RCTView>
</RCTView>
`;

exports[`FormComponents FormInput - Snapshots should match snapshot with error 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#F8FAFC",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Email
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(244, 63, 94, 0.15)",
        "borderColor": "#F43F5E",
        "borderRadius": 12,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "minHeight": 52,
        "paddingHorizontal": 14,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Email"
      autoCapitalize="none"
      autoComplete="off"
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A8A29E"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#F8FAFC",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          false,
          undefined,
          false,
        ]
      }
      value=""
    />
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "marginTop": 6,
      }
    }
  >
    <RCTText
      color="#F43F5E"
      name="alert-circle"
      ref={null}
      size={14}
      testID="RCTText"
    >
      alert-circle
    </RCTText>
    <RCTText
      ref={null}
      style={
        {
          "color": "#F43F5E",
          "fontSize": 12,
        }
      }
      testID="RCTText"
    >
      Required
    </RCTText>
  </RCTView>
</RCTView>
`;
